# OctoQuant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.example.yaml  settings.yaml
models/: autoreg_baseline.pkl  baseline_summary.json  lightgbm_baseline.txt  lightgbm_features.pkl  lightgbm_model.txt
octoquant/backtest/: engine.py  metrics.py
octoquant/core/: config.py  features.py
octoquant/data/: feed_ccxt.py  feed_yf.py
octoquant/risk/: position_sizer.py  risk_manager.py
octoquant/strat/: base.py  ensemble.py  lwpi_tdfi.py  ml_models.py  rsi_pullback.py  sma_cross.py
scripts/: debug_ml.py  optimize.py  run_all.py  train_baselines.py  train_ml.py
tests/: test_sanity.py
